tree-sitter-ggsql/test/corpus/basic.txt
================================================================================
Simple point plot (MAPPING only)
================================================================================

VISUALISE AS PLOT DRAW point MAPPING x AS x, y AS y

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))))

================================================================================
Multi-layer plot
================================================================================

VISUALISE AS PLOT
DRAW line MAPPING date AS x, value AS y
DRAW point MAPPING date AS x, value AS y, 'red' AS color

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (literal_value
                (string)))
            aesthetic: (aesthetic_name)))))))

================================================================================
DRAW with SETTING clause (parameters)
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x, y AS y SETTING opacity TO 0.5, size TO 3

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))
        (setting_clause
          (parameter_assignment
            param: (parameter_name
              (identifier))
            value: (parameter_value
              (number)))
          (parameter_assignment
            param: (parameter_name
              (identifier))
            value: (parameter_value
              (number))))))))

================================================================================
DRAW with FILTER clause
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x, y AS y FILTER x > 10

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))
        (filter_clause
          (filter_expression
            (filter_primary
              (filter_comparison
                (identifier)
                (comparison_operator)
                (number)))))))))

================================================================================
DRAW with FILTER AND condition
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x FILTER a > 10 AND b < 20

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))
        (filter_clause
          (filter_expression
            (filter_and_expression
              (filter_primary
                (filter_comparison
                  (identifier)
                  (comparison_operator)
                  (number)))
              (filter_expression
                (filter_primary
                  (filter_comparison
                    (identifier)
                    (comparison_operator)
                    (number)))))))))))

================================================================================
DRAW with FILTER OR condition
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x FILTER a = 1 OR b = 2

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))
        (filter_clause
          (filter_expression
            (filter_or_expression
              (filter_primary
                (filter_comparison
                  (identifier)
                  (comparison_operator)
                  (number)))
              (filter_expression
                (filter_primary
                  (filter_comparison
                    (identifier)
                    (comparison_operator)
                    (number)))))))))))

================================================================================
DRAW with all clauses
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x, y AS y SETTING opacity TO 0.5 FILTER year > 2020

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))
        (setting_clause
          (parameter_assignment
            param: (parameter_name
              (identifier))
            value: (parameter_value
              (number))))
        (filter_clause
          (filter_expression
            (filter_primary
              (filter_comparison
                (identifier)
                (comparison_operator)
                (number)))))))))

================================================================================
DRAW with string comparison in FILTER
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x FILTER region = 'North'

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))
        (filter_clause
          (filter_expression
            (filter_primary
              (filter_comparison
                (identifier)
                (comparison_operator)
                (string)))))))))

================================================================================
DRAW geom only (no MAPPING)
================================================================================

VISUALISE AS PLOT DRAW point

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
Plot with scales and theme
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x, y AS y, group AS color
SCALE x SETTING type TO 'linear', limits TO [0, 100]
SCALE color SETTING palette TO 'viridis'
THEME minimal

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))
    (viz_clause
      (scale_clause
        (aesthetic_name)
        (scale_property
          (scale_property_name)
          (scale_property_value
            (string)))
        (scale_property
          (scale_property_name)
          (scale_property_value
            (array
              (array_element
                (number))
              (array_element
                (number)))))))
    (viz_clause
      (scale_clause
        (aesthetic_name)
        (scale_property
          (scale_property_name)
          (scale_property_value
            (string)))))
    (viz_clause
      (theme_clause
        (theme_name)))))

================================================================================
Plot with labels
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x, y AS y
LABEL title AS 'My Plot', x AS 'X Axis', y AS 'Y Axis'

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))
    (viz_clause
      (label_clause
        (label_assignment
          (label_type)
          (string))
        (label_assignment
          (label_type)
          (string))
        (label_assignment
          (label_type)
          (string))))))

================================================================================
COORD cartesian with xlim
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x, y AS y
COORD cartesian SETTING xlim TO [0, 100]

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))
    (viz_clause
      (coord_clause
        (coord_type)
        (coord_properties
          (coord_property
            (coord_property_name)
            (array
              (array_element
                (number))
              (array_element
                (number)))))))))

================================================================================
COORD flip
================================================================================

VISUALISE AS PLOT
DRAW bar MAPPING category AS x, value AS y
COORD flip

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))
    (viz_clause
      (coord_clause
        (coord_type)))))

================================================================================
VISUALISE FROM with CTE
================================================================================

WITH cte AS (SELECT * FROM x)
VISUALISE FROM cte AS PLOT
DRAW point MAPPING a AS x, b AS y

--------------------------------------------------------------------------------

(query
  (sql_portion
    (sql_statement
      (with_statement
        (cte_definition
          (identifier)
          (select_statement
            (select_body))))))
  (visualise_statement
    (identifier)
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))))

================================================================================
SELECT followed by VISUALISE AS
================================================================================

SELECT * FROM x
VISUALISE AS PLOT
DRAW bar MAPPING a AS x, b AS y

--------------------------------------------------------------------------------

(query
  (sql_portion
    (sql_statement
      (select_statement
        (select_body))))
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name)))))))

================================================================================
Literal value in MAPPING
================================================================================

VISUALISE AS PLOT
DRAW point MAPPING x AS x, y AS y, "blue" AS color

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (viz_type)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (column_reference
                (identifier)))
            aesthetic: (aesthetic_name))
          (mapping_item
            value: (mapping_value
              (literal_value
                (string)))
            aesthetic: (aesthetic_name)))))))
